cabal-version:   3.4
name:            povozka-parser
version:         0.1.0.0

-- synopsis:
-- description:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Timur Aminev
maintainer:      ablearthy@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:    Povozka.Parser
  other-modules:
    Povozka.AST.Internal
    Povozka.Lexer
    Povozka.Parser.Internal

  -- other-extensions:
  build-tool-depends:
    , alex:alex
    , happy:happy

  build-depends:
    , array
    , base        ^>=4.17.1.0
    , bytestring

  hs-source-dirs:     src
  default-language:   GHC2021

executable povozka-parser
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base            ^>=4.17.1.0
    , bytestring
    , povozka-parser

  hs-source-dirs:   app
  default-language: GHC2021

test-suite povozka-parser-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base            ^>=4.17.1.0
    , povozka-parser
